# lexigo

./: .gitignore  README.md  pyproject.toml
android-app/: .gitignore  settings.gradle.kts
docs/: feasibility-report.md  real-source-translation-validation.md  real-source-validation.md
scripts/: analyze_ja_learning_inventory.py  apply_french_manual_corrections.py  audit_french_translation_backlog.py  build_sqlite.py  classify_ja_candidates_ai.py  classify_ja_learning_levels.py  continue_translate_asxs.py  export_dictionary_package.py  french_classifier.py  french_rule_translator.py  parse_jmdict.py  parse_kaikki_fr.py  prepare_french_batch.py  render_feasibility_report.py  review_french_translation_batch.py  run_french_rough_shards.py  run_local_translation.ps1  sample_report.py  search_words.py  shard_french_translation_input.py  supervise_asxs.py  sync_android_dictionary_assets.py  translate_meanings.py  translate_normalized_words.py  validate_real_source_translations.py  validate_real_sources.py  write_source_registry.py
tests/: conftest.py  test_android_project_layout.py  test_apply_french_manual_corrections.py  test_asxs_streaming.py  test_audit_french_translation_backlog.py  test_build_sqlite_streaming.py  test_examples.py  test_failed_jmdict_overrides.py  test_feasibility_report.py  test_french_classifier.py  test_french_rule_translator.py  test_full_source_parsers.py  test_ja_learning_levels.py  test_jmdict_parser.py  test_kaikki_parser.py  test_local_translation_script.py  test_package_export.py  test_paths.py  test_prepare_french_batch.py  test_reporting.py  (+17 more)
(+134 files in other folders)
